<resources>
    <string name="app_name">Sergo Banjo Banking</string>
    <string name="title_activity_home">MainActivity</string>

    <!-- Messages -->
    <string name="registration_success_message">You are registered</string>
    <string name="registration_fail_message">You are not registered</string>
    <string name="registration_warning_message">Fields doesn\'t empty</string>
    <string name="login_success_message">You are logged</string>
    <string name="login_fail_message">Incorrect email or password</string>
    <string name="login_warning_message">Fields doesn\'t empty</string>


    <!-- HomeActivity -->
    <string name="title_home">Wallet</string>
    <string name="title_dashboard">Stock market</string>
    <string name="title_notifications">Settings</string>


    <!-- MainActivity -->
    <string name="email_login_input_hint">E-mail</string>
    <string name="password_login_input_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="to_registration_button_text">Registration</string>


    <!-- RegistrationActivity -->
    <string name="registration_activity_title">Registration</string>
    <string name="general_caption">General</string>
    <string name="second_name_input_hint">Second name</string>
    <string name="first_name_input_hint">First name</string>
    <string name="patronymic_input_hint">Patronymic</string>

    <string name="passport_caption">Passport</string>
    <string name="passport_number_hint">Passport number</string>
    <string name="passport_series_hint">Passport series</string>

    <string name="user_caption">User account</string>

    <string name="back_login_button_text">Back</string>
    <string name="registration_button_text">Sign up</string>


    <!-- Settings fragment -->
    <string name="general_label">General</string>
    <string name="user_label">User account</string>
    <string name="second_name_label">Second name</string>
    <string name="first_name_label">First name</string>
    <string name="patronymic_label">Patronymic</string>

    <string name="email_label">E-mail</string>
    <string name="passport_label">Passport</string>

    <string name="logout_button_text">Logout</string>


    <!-- BuyActivity -->
    <string name="buy_activity_title">Buy stocks</string>
    <string name="price_text">Price</string>
    <string name="count_text">Count</string>
    <string name="buy_button_text">Buy</string>
    <string name="buy_stock_success_message">Stock buying successfully</string>
    <string name="buy_stock_warning_message">Count of stocks must be less then limit</string>
    <string name="buy_stock_fail_message">Stock buying failure</string>
    <string name="buy_price_label">Buy price</string>
    <string name="sum_stock_label">Result</string>

</resources>